[package]
name = "subkatsu"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]
edition = "2018"

[dependencies]
tinysegmenter = "0.1"
subparse = "0.4"
regex = "1.1"
structopt = "0.2.14"
lazy_static = "1.2.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
walkdir = "2.2.7"

[dependencies.markov]
version = "1.0"
features = ["yaml"]

