[package]
name = "subkatsu"
version = "0.1.4-alpha.0"
authors = ["Walfie <walfington@gmail.com>"]
edition = "2018"

[dependencies]
tinysegmenter = "0.1"
regex = "1.1"
structopt = "0.2.14"
lazy_static = "1.2.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
walkdir = "2.2.7"
rand = "0.6.5"
tempfile = "3.0.6"
serde_json = "1"
serde = "1"
serde_derive = "1"
base64 = "0.10.1"

[dependencies.subparse]
git = "https://github.com/walfie/subparse.git"
rev = "12fa1f4d9e6e72ad3205f5e1019f1c2527d65f6b"

[dependencies.markov]
version = "1.0"
default-features = false
features = ["yaml"]

